--- a/apps/base/overseerr/ingress.yaml
+++ b/apps/base/overseerr/ingress.yaml
@@ -4,14 +4,9 @@ metadata:
   name: overseerr
   namespace: media
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   ingressClassName: traefik
-  tls:
-    - secretName: romanpeters-nl-wildcard-tls
-      hosts:
-        - overseerr.romanpeters.nl
-        - requests.romanpeters.nl
   rules:
     - host: overseerr.romanpeters.nl
       http:
