Use NFS server IP for media PV

--- a/apps/base/media/nfs-pv.yaml
+++ b/apps/base/media/nfs-pv.yaml
@@ -10,7 +10,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: nfs
   nfs:
-    server: unas.internal
+    server: 10.10.10.3
     path: /var/nfs/shared/media
   mountOptions:
     - nfsvers=4.1
