Add media app ingress routes

--- a/apps/base/media/kustomization.yaml
+++ b/apps/base/media/kustomization.yaml
@@ -8,9 +8,13 @@ resources:
   - config-pvcs.yaml
   - sonarr-deployment.yaml
   - sonarr-service.yaml
+  - sonarr-ingress.yaml
   - radarr-deployment.yaml
   - radarr-service.yaml
+  - radarr-ingress.yaml
   - bazarr-deployment.yaml
   - bazarr-service.yaml
+  - bazarr-ingress.yaml
   - prowlarr-deployment.yaml
   - prowlarr-service.yaml
+  - prowlarr-ingress.yaml
