--- a/apps/base/media/kustomization.yaml
+++ b/apps/base/media/kustomization.yaml
@@ -18,3 +18,6 @@ resources:
   - prowlarr-deployment.yaml
   - prowlarr-service.yaml
   - prowlarr-ingress.yaml
+  - gluetun-openvpn.sops.yaml
+  - transmission-deployment.yaml
+  - transmission-service.yaml
