--- a/clusters/prod/apps-kustomization.yaml
+++ b/clusters/prod/apps-kustomization.yaml
@@ -10,5 +10,9 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   wait: true
   timeout: 5m0s
