Add transmission ingress

--- a/apps/base/media/kustomization.yaml
+++ b/apps/base/media/kustomization.yaml
@@ -21,3 +21,4 @@ resources:
   - gluetun-openvpn.sops.yaml
   - transmission-deployment.yaml
   - transmission-service.yaml
+  - transmission-ingress.yaml
