--- a/apps/base/media/config-pvcs.yaml
+++ b/apps/base/media/config-pvcs.yaml
@@ -52,3 +52,14 @@ spec:
   resources:
     requests:
       storage: 5Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: tautulli-config
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
