Move overseerr into media stack

--- a/apps/base/media/config-pvcs.yaml
+++ b/apps/base/media/config-pvcs.yaml
@@ -23,6 +23,17 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: overseerr-config
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: bazarr-config
 spec:
   accessModes:
