Add Jellyfin to media

--- a/apps/base/media/config-pvcs.yaml
+++ b/apps/base/media/config-pvcs.yaml
@@ -74,3 +74,14 @@ spec:
   resources:
     requests:
       storage: 5Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: jellyfin-config
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
