Add homepage dashboard and update domains

--- a/apps/base/media/prowlarr-ingress.yaml
+++ b/apps/base/media/prowlarr-ingress.yaml
@@ -8,6 +8,16 @@ metadata:
 spec:
   ingressClassName: traefik
   rules:
+    - host: prowlarr.romanpeters.nl
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: prowlarr
+                port:
+                  name: http
     - host: prowlarr.prod.romanpeters.nl
       http:
         paths:
