--- a/apps/base/authentik/helmrelease.yaml
+++ b/apps/base/authentik/helmrelease.yaml
@@ -22,6 +22,7 @@ spec:
         annotations:
           traefik.ingress.kubernetes.io/router.entrypoints: web
         hosts:
+          - authentik.romanpeters.nl
           - authentik.prod.romanpeters.nl
     postgresql:
       enabled: true
