--- a/apps/base/infrastructure/homepage-ingress.yaml
+++ b/apps/base/infrastructure/homepage-ingress.yaml
@@ -1,30 +1,30 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: bazarr
-  namespace: media
+  name: homepage
+  namespace: infrastructure
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   ingressClassName: traefik
   rules:
-    - host: bazarr.romanpeters.nl
+    - host: homepage.romanpeters.nl
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: bazarr
+                name: homepage
                 port:
                   name: http
-    - host: bazarr.prod.romanpeters.nl
+    - host: homepage.prod.romanpeters.nl
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: bazarr
+                name: homepage
                 port:
                   name: http
