--- a/apps/base/media/overseerr-ingress.yaml
+++ b/apps/base/media/overseerr-ingress.yaml
@@ -8,6 +8,26 @@ metadata:
 spec:
   ingressClassName: traefik
   rules:
+    - host: overseerr.romanpeters.nl
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: overseerr
+                port:
+                  name: http
+    - host: requests.romanpeters.nl
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: overseerr
+                port:
+                  name: http
     - host: overseerr.prod.romanpeters.nl
       http:
         paths:
