--- a/apps/base/authentik/helmrelease.yaml
+++ b/apps/base/authentik/helmrelease.yaml
@@ -2,17 +2,17 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: authentik
-  namespace: authentik
+  namespace: infrastructure
 spec:
   interval: 10m0s
   chart:
     spec:
       chart: authentik
-      version: 2025.12.3
+      version: 2025.10.2
       sourceRef:
         kind: HelmRepository
         name: authentik
-        namespace: authentik
+        namespace: infrastructure
       interval: 10m0s
   values:
     server:
