--- a/apps/base/authentik/helmrepo.yaml
+++ b/apps/base/authentik/helmrepo.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: authentik
-  namespace: authentik
+  namespace: infrastructure
 spec:
   interval: 1h0m0s
   url: https://charts.goauthentik.io
