--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,17 +5,19 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
+        exclude: '^(rtv/|clusters/prod/flux-system/)'
       - id: check-added-large-files
   - repo: https://github.com/adrienverge/yamllint
     rev: v1.35.1
     hooks:
       - id: yamllint
         args: ["-c", ".yamllint.yaml"]
+        exclude: '^(rtv/|clusters/prod/flux-system/)'
   - repo: https://github.com/google/yamlfmt
     rev: v0.9.0
     hooks:
       - id: yamlfmt
-        exclude: '(^|/).*\\.sops\\.yaml$'
+        exclude: '^(rtv/|clusters/prod/flux-system/)|(^|/).*\\.sops\\.yaml$'
   - repo: local
     hooks:
       - id: validate-kustomize
