--- a/apps/base/infrastructure/homepage-deployment.yaml
+++ b/apps/base/infrastructure/homepage-deployment.yaml
@@ -33,7 +33,11 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /app/config
+            - name: logs
+              mountPath: /app/config/logs
       volumes:
         - name: config
           configMap:
             name: homepage-config
+        - name: logs
+          emptyDir: {}
