Remove homepage default bookmarks

--- a/apps/base/infrastructure/homepage-config.yaml
+++ b/apps/base/infrastructure/homepage-config.yaml
@@ -20,6 +20,8 @@ data:
     - search:
         provider: duckduckgo
         target: _blank
+  bookmarks.yaml: |
+    []
   services.yaml: |
     - Media:
         - Jellyfin:
