--- a/apps/base/infrastructure/homepage-config.yaml
+++ b/apps/base/infrastructure/homepage-config.yaml
@@ -9,6 +9,7 @@ data:
     theme: dark
     color: slate
     headerStyle: boxed
+    statusStyle: dot
     layout:
       Media:
         style: row
@@ -27,37 +28,49 @@ data:
         - Jellyfin:
             href: https://jellyfin.romanpeters.nl
             icon: jellyfin
+            ping: https://jellyfin.romanpeters.nl
         - Overseerr:
             href: https://overseerr.romanpeters.nl
             icon: overseerr
+            ping: https://overseerr.romanpeters.nl
         - Sonarr:
             href: https://sonarr.romanpeters.nl
             icon: sonarr
+            ping: https://sonarr.romanpeters.nl
         - Radarr:
             href: https://radarr.romanpeters.nl
             icon: radarr
+            ping: https://radarr.romanpeters.nl
         - Bazarr:
             href: https://bazarr.romanpeters.nl
             icon: bazarr
+            ping: https://bazarr.romanpeters.nl
         - Prowlarr:
             href: https://prowlarr.romanpeters.nl
             icon: prowlarr
+            ping: https://prowlarr.romanpeters.nl
         - Transmission:
             href: https://transmission.romanpeters.nl
             icon: transmission
+            ping: https://transmission.romanpeters.nl
         - Tautulli:
             href: https://tautulli.romanpeters.nl
             icon: tautulli
+            ping: https://tautulli.romanpeters.nl
     - Infrastructure:
         - Authentik:
             href: https://authentik.romanpeters.nl
             icon: mdi-shield-account
+            ping: https://authentik.romanpeters.nl
         - NGINX:
             href: https://nginx.romanpeters.nl
             icon: mdi-server
+            ping: https://nginx.romanpeters.nl
         - Proxmox:
             href: https://proxmox.romanpeters.nl
             icon: mdi-server-network
+            ping: https://proxmox.romanpeters.nl
         - UniFi:
             href: https://unifi.romanpeters.nl
             icon: mdi-wifi
+            ping: https://unifi.romanpeters.nl
