--- a/clusters/prod/apps-kustomization.yaml
+++ b/clusters/prod/apps-kustomization.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./apps/prod
+  path: ./apps
   prune: true
   sourceRef:
     kind: GitRepository
