--- a/apps/infrastructure/homepage-tv-ingress.yaml
+++ b/apps/infrastructure/homepage-tv-ingress.yaml
@@ -18,3 +18,13 @@ spec:
                 name: homepage-tv
                 port:
                   name: http
+    - host: tv.prod.romanpeters.nl
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: homepage-tv
+                port:
+                  name: http
