--- a/apps/infrastructure/homepage-config.yaml
+++ b/apps/infrastructure/homepage-config.yaml
@@ -77,6 +77,16 @@ data:
             icon: mdi-heart-pulse
             siteMonitor: https://uptime.romanpeters.nl
             siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
+        - Home Assistant:
+            href: https://home.romanpeters.nl
+            icon: mdi-home-assistant
+            siteMonitor: https://home.romanpeters.nl
+            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
+        - Ansible Automation:
+            href: https://automation.romanpeters.nl
+            icon: mdi-robot-industrial
+            siteMonitor: https://automation.romanpeters.nl
+            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
     - Infrastructure:
         - Authentik:
             href: https://authentik.romanpeters.nl
@@ -97,14 +107,4 @@ data:
             href: https://unifi.romanpeters.nl
             icon: mdi-wifi
             siteMonitor: https://unifi.romanpeters.nl
-            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
-        - Home Assistant:
-            href: https://home.romanpeters.nl
-            icon: mdi-home-assistant
-            siteMonitor: https://home.romanpeters.nl
-            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
-        - Automation:
-            href: https://automation.romanpeters.nl
-            icon: mdi-robot-industrial
-            siteMonitor: https://automation.romanpeters.nl
             siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
