--- a/apps/media/config-pvcs.yaml
+++ b/apps/media/config-pvcs.yaml
@@ -85,3 +85,14 @@ spec:
   resources:
     requests:
       storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: audiobookshelf-config
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
