Add calibre web

--- a/apps/infrastructure/homepage-config.yaml
+++ b/apps/infrastructure/homepage-config.yaml
@@ -92,6 +92,11 @@ data:
             icon: mdi-book-open-page-variant
             siteMonitor: https://books.romanpeters.nl
             siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
+        - Calibre Web:
+            href: https://ebooks.romanpeters.nl
+            icon: mdi-book-open-variant
+            siteMonitor: https://ebooks.romanpeters.nl
+            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
     - Infrastructure:
         - Authentik:
             href: https://authentik.romanpeters.nl
