--- a/apps/media/config-pvcs.yaml
+++ b/apps/media/config-pvcs.yaml
@@ -96,3 +96,14 @@ spec:
   resources:
     requests:
       storage: 5Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: calibre-web-config
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
