--- a/apps/media/calibre-web-ingress.yaml
+++ b/apps/media/calibre-web-ingress.yaml
@@ -27,3 +27,13 @@ spec:
                 name: calibre-web
                 port:
                   name: http
+    - host: library.romanpeters.nl
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: calibre-web
+                port:
+                  name: http
