--- a/apps/apps/config-pvcs.yaml
+++ b/apps/apps/config-pvcs.yaml
@@ -30,3 +30,14 @@ spec:
   resources:
     requests:
       storage: 5Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: heimdall-config
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
