--- a/apps/apps/kustomization.yaml
+++ b/apps/apps/kustomization.yaml
@@ -10,6 +10,10 @@ resources:
   - changedetection-deployment.yaml
   - changedetection-service.yaml
   - changedetection-ingress.yaml
+  - heimdall-deployment.yaml
+  - heimdall-service.yaml
+  - heimdall-ingress.yaml
+  - heimdall-redirects.yaml
   - playwright-chrome-deployment.yaml
   - playwright-chrome-service.yaml
   - uptime-kuma-deployment.yaml
