--- a/apps/apps/heimdall-deployment.yaml
+++ b/apps/apps/heimdall-deployment.yaml
@@ -30,6 +30,8 @@ spec:
               value: "Europe/Amsterdam"
             - name: APP_NAME
               value: "romanpeters"
+            - name: APP_URL
+              value: "https://hello.romanpeters.nl"
           volumeMounts:
             - name: config
               mountPath: /config
