--- a/apps/media/transmission-deployment.yaml
+++ b/apps/media/transmission-deployment.yaml
@@ -14,6 +14,16 @@ spec:
       labels:
         app.kubernetes.io/name: transmission
     spec:
+      initContainers:
+        - name: init-downloads
+          image: busybox:1.36
+          command:
+            - /bin/sh
+            - -c
+            - mkdir -p /mnt/media/downloads/complete /mnt/media/downloads/incomplete /mnt/media/downloads/watch
+          volumeMounts:
+            - name: media
+              mountPath: /mnt/media
       containers:
         - name: gluetun
           image: qmcgaw/gluetun:v3.40.0
