--- a/clusters/prod/flux-system/gotk-sync.yaml
+++ b/clusters/prod/flux-system/gotk-sync.yaml
@@ -11,7 +11,7 @@ spec:
     branch: main
   secretRef:
     name: flux-system
-  url: ssh://git@github.com/romanpeters/k3s
+  url: ssh://git@github.com/romanpeters/kubernetes
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
