--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
+        args: ["--allow-multiple-documents"]
         exclude: '^(rtv/|clusters/prod/flux-system/)'
       - id: check-added-large-files
   - repo: https://github.com/adrienverge/yamllint
